fixed scrollbar at nodeView

--- a/src/components/sidebar/networkView/networkView.scss
+++ b/src/components/sidebar/networkView/networkView.scss
@@ -1,5 +1,5 @@
 .networkView {
     padding: 10px;
     width: 500px;
-    overflow: scroll;
+    overflow-y: auto;
 }
